fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -7,7 +7,6 @@ border: 1px solid red;
 body{
 padding: 0;
 margin: 0;
-padding-bottom: 5px;
 }
 
 h1 {
